--- a/docs/fr/modules/main/functions/Status.tex
+++ b/docs/fr/modules/main/functions/Status.tex
@@ -15,6 +15,25 @@
 \usepackage[document]{ragged2e}								% Justification du texte.
 \usepackage[a4paper,margin=1in,footskip=0.25in]{geometry}	% Mise en page du document.
 
+% Definition de couleurs.
+\definecolor{mauve}{RGB}{228, 0, 228}
+\definecolor{brick}{HTML}{be480a}
+
+% Liste des couleurs définies (pour la mise en page et pour le changement de thème pour l'impression de la documentation).
+\definecolor{back}{HTML}{000000}        % Noir          - Fond
+\definecolor{case}{HTML}{fcff00}        % Jaune clair   - Conditions case
+\definecolor{cmds}{HTML}{909090}        % Gris          - Commandes + arguments
+\definecolor{cond}{HTML}{be480a}        % Brique        - Conditions
+\definecolor{func}{HTML}{8F00FF}        % Violet        - Fonctions
+\definecolor{loop}{HTML}{00ffff}        % Cyan          - Boucles
+\definecolor{path}{HTML}{bfff00}        % Citron vert   - Chemins de dossiers et de fichiers
+\definecolor{sec1}{HTML}{ff0000}        % Rouge         - Titres de premier niveau
+\definecolor{sec2}{HTML}{00ff00}        % Vert          - Titres de deuxième niveau
+\definecolor{sec3}{HTML}{0070ff}        % Bleu          - Titres de troisième niveau
+\definecolor{text}{HTML}{ffffff}        % Blanc         - Texte normal
+\definecolor{vars}{HTML}{FF7F00}        % Orange        - Noms des paramètres et des variables
+
+
 \fontfamily{Roboto}
 
 \pagecolor{black}
